<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_id">556141531146952</string>
    <string name="home_activity">co.storyroll.activity.MainChannelsActivity</string>
    <string name="channel_activity">co.storyroll.activity.ChannelActivity</string>

    <string name="selectAccountLabel">Select</string>
    <string name="selectLabel">Select label</string>
    <string name="targetAccountLabel">Target Account</string>
    <string name="undefinedTypeLabel">(Undefined)</string>
    <string name="allAccounts">All Accounts</string>
    <string name="contactCreationFailure">Contact creation failed, check logs.</string>
    <string name="contactEmailLabel">Contact Email</string>
    <string name="contactNameLabel">Contact Name</string>
    <string name="contactPhoneLabel">Contact Phone</string>
    <string name="save">Save</string>

    <string name="app_name">StoryRoll</string>
    <string name="contacts_name">Invite contacts</string>

    <string name="app_desc">Create your story and let it roll.</string>
    
    <string name="dummy_button">Proceed</string>
    <string name="dummy_content">STORYROLL\nCollaborative storytelling</string>
    <string name="login_text">Want to join the story? Please signup or login.</string>
    <string name="channel_text">Create new private Room</string>
    <string name="channel_name">Name</string>

    <string name="user_name">User name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="location">City</string>
    <string name="done">Done</string>
    <string name="register">Register</string>
    <string name="cast">CLIPS:</string>
    
    <string name="ready">GOT IT!</string>
    <string name="record">REC</string>
    <string name="go">GO</string>
    <string name="upload">UPLOAD</string>
    <string name="again">AGAIN</string>
    <string name="sym_left">&lt;</string>
    
    <string name="action_join">Join Some Roll</string>
    <string name="action_log">Debug log</string>
    
    <string name="facebook_button">Connect with Facebook</string>
    <string name="msg_registration">Registration - review/fill</string>
    <string name="msg_password_email_required">Please enter both email and password</string>
    <string name="msg_uname_required">Please provide valid username</string>
    <string name="msg_uname_not_unique">Such username already registered, edit and try again</string>
    <string name="msg_channel_name_required">Please name your Room</string>

    <string name="play_roll_info">To see next roll, swipe left</string>

    <string name="me">Me</string>
    
    <string name="connecting_facebook">Connecting Facebook</string>
    <string name="facebook_login">Facebook Login</string>
           
        
	<string name="sharing">Sharing</string>
	<string name="shared">Shared</string>
	<string name="commented">Commented</string>
	<string name="updated">Updated</string>
	<string name="liked">Liked</string>
	<string name="share_app_message">Hey! Liking this StoryRoll app on Android</string>
	<string name="videocap_ready_message">Continue this episode</string>
	<string name="video_uploaded_message">Got it!\n\nYour roll\n will be ready\n in few moments.</string>
	<string name="no_rolls_message">No rolls to display in this section.</string>
	
			
	<string name="settings">Settings</string>    
	
    <string name="action_rolls_top">Top Rolls</string>    
    <string name="action_rolls_new">New Rolls</string>    
    <string name="action_rolls_my">My Rolls</string>    
    <string name="action_rolls_favs">Fav Rolls</string>    
    
	<string name="action_settings">Settings</string>    
	<string name="action_profile">Profile</string>
	<string name="action_help">Help</string>
	<string name="action_login">Sign-in</string>
	
	<string name="connection_failed">Connection Failed</string>
	<string name="retry">Retry</string>
	<string name="refresh">Refresh</string>
	
	<string name="status_update">Status Update</string> 
	<string name="comment">Comment</string> 
	<string name="send">Send</string> 
	<string name="cancel">Cancel</string>  
	
	    
	<string name="share">Share</string> 
	<string name="share_app_sum">Share this app</string> 
	<string name="review">Review</string> 
	<string name="review_app_sum">Review this app</string> 
	<string name="logout">Logout</string> 
	<string name="logout_sum">Logout StoryRoll</string>    
	<string name="login">Sign-up</string> 
	<string name="login_sum">Sign-up or Login StoryRoll</string>    
	<string name="version">Version</string>   
    
    <string name="feedback">Feedback</string>
    <string name="comments">comments</string> 
    <string name="sending">Sending</string>
    
    <string name="p_no_content">No Content</string>
            
    <string name="like">Like</string> 
    <string name="see_comments">See Comments</string>     
    <string name="report_problem">StoryRoll: Report Problem</string>  
    <string name="report_problem_sum">Send report to developer</string>     
    <string name="send_email">Send Email</string> 
        
    <string name="photo">Photo</string> 
    <string name="no_permission">Permission Denied</string> 
    <string name="discuss">Discuss / Feature Request</string>
    
    <string name="view_photo">View Photo</string>
    <string name="view_web">Open Webpage</string>    
    <string name="play_video">Play Video</string>
    
    <string name="pending_upload">Photo will be uploaded.</string>
        
    <string name="upload_failed">Upload Failed</string>    
    <string name="photo_upload">Photo Upload</string> 
    <string name="upload_completed">Upload Completed</string> 
    <string name="no_sd">No SD Card</string> 
    
    <string name="photo_album">Photo Album</string> 
    <string name="delete">Delete</string>
    
    <string name="marked_read">Marked as Read</string>    
        
    <string name="n_friends">Friends</string>
    <string name="n_movies">Movies</string>
    <string name="n_likes">Likes</string>
    <string name="n_music">Music</string>
    <string name="n_books">Books</string>
    <string name="n_notes">Notes</string>
    <string name="n_videos">Videos</string> 
    <string name="n_events">Events</string> 
    <string name="n_groups">Groups</string> 
    <string name="n_checkins">Checkins</string>  
    <string name="n_locations">Locations</string>  
    <string name="n_notifications">Notifications</string>  
    
    <string name="v_search">Search</string>
    <string name="enable_gps">Enable GPS</string>
    
    <string name="n_sso">Single Sign On</string>
    <string name="p_sso_sum">Use device account to sign on</string>
    <string name="p_location_update">Location update</string>   
        
    <string name="other_data">Other Info</string>
    <string name="help_text">Continue random\n stories by <font color='red'>recording</font>\n short video sequels\n and <font color='blue'>enjoy</font> unexpected\n outcome</string>
    <string name="action_add_group_trial">Invite people (signed)</string>
    <string name="action_chan_new_trial">New Room (signed)</string>
    <string name="dialog_signup">You have to be signed in to join the story. Sign up now?</string>
    <string name="button_signin">Sign-in</string>
    <string name="dialog_signup_title">Welcome to StoryRoll</string>

    <string name="store_pass">storyroll123</string>
    <string name="btn_not_interested">Meh</string>
    <string name="btn_interested">Interested!</string>
    <string name="action_add_group">Invite people</string>
    <string name="action_chan_new">New Room</string>
    <string name="dialog_remove_movie">In future versions, this control will alow you to hide the video from your
        list.
    </string>
    <string name="notif_video_published">Your video was published</string>
    <string name="notif_you_got_response">You got response!</string>
    <string name="notif_new_video">New video</string>
    <string name="notif_response_channel">Response in Room</string>
    <string name="msg_facebook_connected">Facebook connected, wait a moment...</string>
    <string name="entity_channel">Room</string>
    <string name="clear_cache">Clear cache</string>
    <string name="contacts_too_many">Only 5 contacts can be invited. Please unselect and reselect some of your
        contacts.
    </string>
    <string name="action_leave_channel">Leave Room</string>
    <string name="pick_answer_share">Pick the way you would like to share in the future versions</string>
    <string name="pick_answer_roll">In future, we will add a feature here to generate a movie from your video clips.</string>
    <string name="dialog_leave_channel">Leave room? Currently it\'s not yet possible to re-discover left rooms.
    </string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="video_uploaded">Got it! Video uploaded.</string>
    <string name="tab_friends">StoryRoll</string>
    <string name="tab_adressbook">PhoneBook</string>
    <string name="tab_email">Email</string>
    <string name="update_friends">Update friends</string>
    <string name="notif_channel_invite">Room invite</string>
    <string name="msg_storyroll_slogan">Share your life\nin 2 sec</string>
    <string name="login_alternative_login">or use an email/password combination:</string>
    <string name="empty_error_loading_videos">Something broke while loading videos.\nPlease try refreshing later.</string>
    <string name="dialog_friend_check">Check who from your contacts is using StoryRoll?\nYour address book will only be checked once, and it will not be stored on our server.</string>
    <string name="msg_short_friend_check">Check who from your contacts is using StoryRoll</string>
    <string name="msg_long_friend_check">Check who from your contacts is using StoryRoll? We\'ll check once, and will not store the contacts on our server.</string>
    <string name="button_start_new">START NEW ROLL</string>
    <string name="msg_movie_list_empty">Room is waiting for your rolls!\nClick the icon on top bar to add one.</string>
    <string name="msg_channels_not_loaded">Rooms not yet loaded</string>
    <string name="invite_email_text">Enter email address(es) to invite</string>


</resources>
