<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.LoginActivity"
    android:screenOrientation="portrait"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/login_label"
        android:layout_width="fill_parent"
        android:layout_height="20pt"
        android:text="@string/login_text" />
    
    <RelativeLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content">
	    <Button
	        android:id="@+id/facebook_button"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:text="@string/facebook_button"
	        android:textSize="12sp" />
	    <ProgressBar 
				android:id="@+id/progress"	
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal" 
				android:visibility="gone"
		        android:layout_alignParentLeft="true"
		        android:layout_toLeftOf="@id/facebook_button"
			/>
    </RelativeLayout>
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="20pt"
        android:text="@string/login_alternative_login"
        android:visibility="visible" />

    <EditText
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:visibility="visible" />
    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:visibility="visible" />
     <Button
        android:id="@+id/done_button"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:visibility="visible" />


</LinearLayout>
