<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.ChannelCreateActivity"
    android:screenOrientation="portrait"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/channel_label"
        android:layout_width="fill_parent"
        android:layout_height="20pt"
        android:text="@string/channel_text" />


    <EditText
        android:id="@+id/channel_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/channel_name"
        android:visibility="visible" />

     <Button
        android:id="@+id/done_button"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:visibility="visible" />


</LinearLayout>
