<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.ProfileActivity"
    android:orientation="vertical" 
    android:screenOrientation="portrait" >
    
    <TextView
        android:id="@+id/profileMessage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Edit Profile"
        android:textSize="8pt"
        android:layout_marginBottom="16dp"
        />
    <LinearLayout 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	>
        <ImageView
        android:id="@+id/avatar"   
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/ic_avatar_default"
        android:contentDescription="Avatar"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
         />
        <TextView
            android:layout_weight="3"
	        android:layout_width="0px"
	        android:layout_height="wrap_content"
            android:visibility="invisible"
            />
    </LinearLayout>
    
    <EditText
        android:id="@+id/user_name"
        android:inputType="textPersonName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name" />
    <EditText
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:hint="@string/email" />
    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password" />
     <EditText
        android:id="@+id/location"
        android:inputType="text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location" />   
    <RelativeLayout 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content">
	    <Button
	        android:id="@+id/done_button"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:text="@string/done" />
		<ProgressBar
		    android:id="@+id/progress"
	         android:layout_width="wrap_content"
	         android:layout_height="20pt"
	         style="@android:style/Widget.ProgressBar.Small"
	         android:layout_toRightOf="@id/done_button"
         	android:layout_marginLeft="5dp"
         	android:visibility="invisible" />
	</RelativeLayout>
</LinearLayout>
